# mackerel-plugin-loadavg

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
src/: lib.rs
tests/: lib.rs
