[package]
name = "mackerel_plugin_loadavg"
version = "0.1.0"
authors = ["itchyny <itchyny@cybozu.co.jp>"]
description = "Loadavg plugin for Mackerel"
repository = "https://github.com/itchyny/mackerel-plugin-loadavg"
readme = "README.md"
license = "MIT"
keywords = ["cli", "mackerel"]
edition = "2021"

[dependencies]
mackerel_plugin = "0.2.6"
libc = "0.2.150"

[[bin]]
name = "mackerel-plugin-loadavg"
path = "bin/main.rs"
